[package]
name = "day9"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "day9-part1"
path = "src/part1.rs"

[[bin]]
name = "day9-part2"
path = "src/part2.rs"

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
regex = "1.10.2"
rstest = "0.18.2"
